--- a/iotcloud/src/main/resources/application-dev.yml
+++ b/iotcloud/src/main/resources/application-dev.yml
@@ -5,7 +5,8 @@ spring:
   datasource:
     username: root
     password: 970531
-    url: jdbc:mysql://localhost:3306/springboot?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+#    url: jdbc:mysql://localhost:3306/springboot?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+    url: jdbc:mysql://192.168.2.103:3306/springboot?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
     driver-class-name: com.mysql.jdbc.Driver
 
 mybatis:
